<resources>
    <string name="app_name">Mobile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_grupo">Categorias</string>
    <string name="title_activity_activity_grupo_form">Categoria</string>
    <string name="GrupoNome">Nome</string>
    <string name="grupoNomeHint">Nome da Categoria</string>
    <string name="Salvar">Salvar</string>
    <string name="grupoNovo">Novo Grupo</string>
    <string name="title_activity_negocio">Negócios</string>
    <string name="Pesquisar">Pesquisar</string>
    <string name="title_activity_negocio_form">Negócios</string>
    <string name="Cancelar">Cancelar</string>
    <string name="title_activity_produto">Produtos</string>
    <string name="title_activity_produto_activity_form">Produto</string>
    <string name="Nome">Nome</string>
    <string name="Descricao">Descriçao</string>
    <string name="Produtos">Produtos</string>
    <string name="Materiais">Materiais</string>
    <string name="title_activity_negocio_activity_details">Detalhes</string>
    <string name="title_activity_teste">TesteActivity</string>
    <string name="title_activity_negocio2">Negócios</string>
    <string name="Especificacoes">Especificações</string>
    <string name="ProdutoDetalhe">Detalhes do Produto</string>
    <string name="Registros">Especificações</string>
    <string name="RegistrosNome">Informe uma especificação deste Produto</string>
    <string name="Orcamento">Orçamento</string>
    <string name="OrcamentoNome">nome do Orçamento</string>
    <string name="Grupos">Categorias</string>
    <string name="title_activity_materiais">Materiais</string>
    <string name="title_activity_materiais_activity_form">Materiais</string>
    <string name="alertMessageOption">Qual operação você deseja realizar?</string>
    <string name="title_activity_materiais_produto">Materiais do Produto</string>
    <string name="Editar">Editar</string>
    <string name="EditarEspecificacao">Editar Especificação</string>
    <string name="tituloOpcao">Escolha uma opção</string>
    <string name="mensagemOpcao">O que você deseja?</string>
    <string name="Detalhes">Detalhes</string>
    <string name="title_activity_produto_material">Materiais</string>
    <string name="title_activity_produto_registro">Especificaçoes</string>
    <string name="Abrir">Abrir</string>
    <string name="Completar">Completar</string>
    <string name="CriarNegocio">Criar Negocio</string>
    <string name="MaisDetalhes">Mais Detalhes</string>
    <string name="TotalProdutos">Total de Produtos</string>
    <string name="ValorTotal">Valor Total</string>
    <string name="Deletar">Deletar</string>
    <string name="Negocio">Negócio </string>
</resources>

