<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.interdisciplinar.mobile.GrupoActivityForm"
    android:orientation="vertical"
    android:id="@+id/grupoLnlFrom">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Grupos"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/GrupoNome"
        android:id="@+id/textView3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/grupoTxtNome"
        android:hint="@string/grupoNomeHint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Salvar"
        android:id="@+id/grupoButtonSalvar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp" />
</LinearLayout>
