<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.interdisciplinar.mobile.ProdutoActivityDetalhes"
    android:orientation="vertical">


    <TextView
        style="@style/txtHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ProdutoDetalhe"
        android:id="@+id/textView18" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView4" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/labelDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Nome"
                android:id="@+id/textView20" />

            <TextView android:id="@+id/produtoDetalheNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
               style="@style/labelDetails"
                android:text="@string/Descricao"
                android:id="@+id/textView25" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/produtoDetalheDescricao" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Materiais"
                    android:id="@+id/produtoDetalhesMaterialBtn"
                    android:layout_weight="1"
                    android:layout_marginBottom="15dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Especificacoes"
                    android:id="@+id/produtoDetalhesBtnRegistros"
                    android:layout_weight="1"
                    android:layout_marginBottom="15dp" />
            </LinearLayout>

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/produtoDetalheProgressBar"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tela Inicial"
                    android:id="@+id/produtoDetalhesBtnHome"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Negócio"
                    android:id="@+id/produtoDetalhesBtnNegocio"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
