<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Orcamento"
            android:id="@+id/MainBtnOrcamento"
            android:drawableTop="@drawable/ic_attach_money_white_24dp"
            android:layout_gravity="center_horizontal"
            android:onClick="CallOrcamentos"
            android:layout_weight="1"
             />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Negócios"
            android:drawableTop="@drawable/ic_next_week_white_24dp"
            android:id="@+id/MaintnNegocio"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.AppCompat.Button.Colored"
            android:onClick="CallNegocios"
            android:layout_weight="1"
             />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Grupos"
            android:drawableTop="@drawable/ic_storage_white_24dp"
            android:id="@+id/MainBtnGrupo"
            android:layout_gravity="center_horizontal"
            android:onClick="CallGrupo"
            android:layout_weight="1"
            />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Materiais"
            android:id="@+id/MainBtnMateriais"
            android:drawableTop="@drawable/ic_weekend_white_24dp"
            android:onClick="CallMateriais"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
