<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.interdisciplinar.mobile.NegocioActivityDetails"
    android:orientation="vertical">


    <TextView
        style="@style/txtHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Detalhes do negócio"
        android:id="@+id/negocioDetalhesTxtHeader"
        android:gravity="center"
        android:textColor="#000" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/labelDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nome"
                android:id="@+id/textView15"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="..."
                android:id="@+id/negocioDetailNome" />

            <TextView
                style="@style/labelDetails"
                android:text="Cliente"
                android:id="@+id/textView17"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/negocioDetailCliente" />

            <TextView
                style="@style/labelDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Endereço"
                android:id="@+id/textView19"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/negocioDetailEndereco" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Criado em"
                android:id="@+id/textView28"
                style="@style/labelDetails" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/negocioDetalhesDataCriacao" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Data de Término"
                android:id="@+id/negocioDetalhestxtDataTerminoLabel"
                style="@style/labelDetails" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/negocioDetalhesTxtDataTermino" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Produtos"
                    android:id="@+id/negocioProdutoBtnIndex"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                style="@style/labelDetails"
                android:text="Totais"
                android:id="@+id/textView22"
                android:textStyle="bold" />

           <!-- <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/TotalProdutos"
                    android:layout_weight="2"
                    style="@style/labelDetails" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Unit."
                    android:id="@+id/negocioDetalhesTxtQuantidadeProdutosNegocio"
                    style="@style/labelDetails" />
            </LinearLayout>-->

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/labelDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Valor Atual"
                    android:id="@+id/textView24"
                    android:layout_weight="2"/>

                <TextView
                    style="@style/labelDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="R$"
                    android:id="@+id/negocioDetailValorTotal" />
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/negocioDetalhesBtnCriarNegocio"
                    android:text="@string/CriarNegocio"
                    android:layout_weight="1"
                    android:layout_marginTop="15dp"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/negocioDetalhesLayoutComparacao"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Valores do Orçamento"
                    android:id="@+id/textView16"
                    android:textStyle="bold"
                    style="@style/labelDetails"
                    android:layout_gravity="top" />

                <!--<LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/TotalProdutos"
                        android:id="@+id/textView21"
                        android:layout_weight="2"
                        style="@style/labelDetails" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Unit."
                        android:id="@+id/negocioDetalhesTxtQuantidadeProdutosOrcamento"
                        style="@style/labelDetails" />
                </LinearLayout>-->

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/ValorTotal"
                        android:id="@+id/textView14"
                        android:layout_weight="2"
                        style="@style/labelDetails" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="R$"
                        android:id="@+id/negocioDetalhesTxtValorTotalOrcamento"
                        style="@style/labelDetails" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
